# s3-resource-operator

./: .commitlintrc.json  .editorconfig  .gitignore  .gitignore.go  .helmignore  .pre-commit-config.yaml  .releaserc.js  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MIGRATION.md  Makefile  README.md  SECURITY.md  docker-compose.yml  go.mod  go.sum  package.json  pyproject.toml  pytest.ini  renovate.json  requirements-test.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/workflows/: commitlint.yml  publish.yml  release.yml  sync.yml  test.yml
cmd/: main.go
contrib/: example-external-secret.yaml  example-secret.yaml
crontrib/: example-external-secret.yaml  example-secret.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
pkg/backends/: backend.go  backend_test.go  garage.go  minio.go  mock_backend.go  versitygw.go
pkg/controller/: controller.go  controller_test.go
pkg/metrics/: metrics.go  metrics_test.go
src/: __init__.py  main.py  metrics.py  operator.py  secrets.py  utils.py
src/backends/: __init__.py  backend.py  garage.py  minio.py  versitygw.py
tests/: conftest.py  test_backends.py  test_config.py  test_connection.py  test_health.py  test_main.py  test_metrics.py  test_operator.py  test_secrets.py  test_shutdown.py
