[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s3-resource-operator"
version = "0.1.0"
description = "Kubernetes operator to manage S3 buckets and IAM users for S3-compatible object stores"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "runningman84"}
]
keywords = ["kubernetes", "operator", "s3", "minio", "versitygw", "garage"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "kubernetes",
    "boto3",
    "requests",
    "botocore",
    "prometheus-client",
    "python-dotenv",
    "urllib3>=2.6.0,<3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-mock",
    "moto",
    "mock",
]

[project.urls]
Homepage = "https://github.com/runningman84/s3-resource-operator"
Documentation = "https://github.com/runningman84/s3-resource-operator#readme"
Repository = "https://github.com/runningman84/s3-resource-operator"
Issues = "https://github.com/runningman84/s3-resource-operator/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = [
    "--verbose",
    "--strict-markers",
    "--strict-config",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
